--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -10,10 +10,17 @@
   <string name="about_title">О приложении</string>
   <string name="about_version">Версия</string>
   <string name="about_website_v2_2_0">Сайт</string>
+  <string name="accoount_enter_chain_address_format">Введите действительный %s адрес...</string>
+  <string name="accoount_enter_evm_address">EVM Адрес  должен быть действительным или пустым...</string>
+  <string name="accoount_enter_substrate_address">Введите действительный Substrate адрес...</string>
+  <string name="account_add_account">Добавить аккаунт</string>
   <string name="account_add_already_exists_message">Аккаунт уже существует. Пожалуйста, попробуйте другой.</string>
+  <string name="account_add_watch_only_description">Отследить любой кошелек по его адресу</string>
+  <string name="account_add_watch_wallet">Добавить watch-only кошелек</string>
   <string name="account_backup_mnemonic_field_title">Мнемоническая фраза</string>
   <string name="account_backup_mnemonic_title">Запишите фразу и храните её в надежном месте</string>
   <string name="account_backup_secret_caption">Пожалуйста, убедитесь, что ваша фраза записана корректно и разборчиво.</string>
+  <string name="account_chain_address_format">%s адрес</string>
   <string name="account_confirm_mnemonic">Подтверждение</string>
   <string name="account_confirm_mnemonic_subtitle">Выберите слова в правильном порядке</string>
   <string name="account_confirm_mnemonic_title">Давайте перепроверим</string>
@@ -26,10 +33,12 @@
   <string name="account_creation_info">Мнемоническая фраза используется для восстановления доступа к аккаунту. Запишите ее, мы не сможем восстановить доступ к аккаунту без нее!</string>
   <string name="account_custom_secret">Аккаунты с изменённым секретом</string>
   <string name="account_delete_confirm">Забыть</string>
-  <string name="account_delete_confirmation_description">Прежде чем продолжить, убедитесь, что вы создали резервную копию своей учетной записи.</string>
-  <string name="account_delete_confirmation_title">Забыть аккаунт?</string>
+  <string name="account_delete_confirmation_description">Прежде чем продолжить, убедитесь, что вы создали резервную копию своего кошелька.</string>
+  <string name="account_delete_confirmation_title">Забыть кошелек?</string>
   <string name="account_derivation_path_ethereum_invalid_title">Некорректный путь деривации для Ethereum</string>
   <string name="account_derivation_path_substrate_invalid_title">Некорректный путь деривации для Substrate</string>
+  <string name="account_details_watch_only_alert">Это watch-only кошелек, Nova может показать вам баланс и другую информацию, но вы не можете выполнять какие-либо транзакции с этим кошельком.</string>
+  <string name="account_enter_wallet_nickname">Введите имя кошелька...</string>
   <string name="account_error_try_another_one">Пожалуйста, попробуйте другой.</string>
   <string name="account_ethereum_crypto_type">Тип ключевой пары Ethereum</string>
   <string name="account_ethereum_derivation_path">Последовательность для вывода секрета Ethereum</string>
@@ -50,6 +59,8 @@
   <string name="account_import_password_placeholder">Пароль</string>
   <string name="account_import_seed_hint">0xAB</string>
   <string name="account_import_seed_title">Введите ваш сид</string>
+  <string name="account_import_wallet_subtitle">Nova совместима со всеми приложениями</string>
+  <string name="account_import_wallet_title">Импортировать кошелёк</string>
   <string name="account_info_title">Аккаунт</string>
   <string name="account_invalid_derivation_path_message_v2_2_0">Ваш путь деривации содержит неподдерживаемые символы или имеет некорректную структуру</string>
   <string name="account_invalid_derivation_path_title">Некорректный путь деривации</string>
@@ -62,10 +73,19 @@
   <string name="account_restore_account">У меня уже есть аккаунт</string>
   <string name="account_seed_hex_symbols">64 шест. символа</string>
   <string name="account_select_secret_source">Выберите ваш тип секрета</string>
+  <string name="account_select_wallet">Выберите кошелек</string>
   <string name="account_shared_secret">Аккаунты с общим секретом</string>
   <string name="account_substrate_crypto_type">Тип ключевой пары Substrate</string>
   <string name="account_substrate_derivation_path">Последовательность для вывода секрета Substrate</string>
   <string name="account_wallet_nickname">Имя кошелька</string>
+  <string name="account_watch_add_evm_address_description">Moonbeam, Moonriver и другие сети</string>
+  <string name="account_watch_add_evm_address_optional">EVM Адрес (необязательно)</string>
+  <string name="account_watch_add_presets">Предустановленные кошельки</string>
+  <string name="account_watch_add_substrate_address_description">Polkadot, Kusama, Karura, KILT и 50+ сетей</string>
+  <string name="account_watch_add_subtitle">Отслеживайте активность любого кошелька, не вводя свой приватный ключ в Nova Wallet</string>
+  <string name="account_watch_key_missing_description">Ваш кошелек доступен только для просмотра, то есть вы не можете выполнять с ним никаких операций</string>
+  <string name="account_watch_key_missing_title">Упс! Ключ отсутствует</string>
+  <string name="account_watch_only">watch-only</string>
   <string name="accounts_add_chain_account">Добавить %s аккаунт</string>
   <string name="accounts_add_wallet">Добавить кошелёк</string>
   <string name="accounts_change_chain_account">Изменить аккаунт %s</string>
@@ -122,6 +142,7 @@
   <string name="common_enter_amount">Введите сумму...</string>
   <string name="common_error_general_title">Ошибка</string>
   <string name="common_event">Событие</string>
+  <string name="common_evm_address">EVM Адрес</string>
   <string name="common_existential_warning_message_v2_2_0">Ваша учетная запись будет удалена из сети после операции, так как ваш баланс опустится ниже минимального</string>
   <string name="common_existential_warning_title">Операция удалит аккаунт</string>
   <string name="common_explore">Исследуй</string>
@@ -155,6 +176,7 @@
   <string name="common_not_enough_funds_message">К сожалению, у вас недостаточно средств для оплаты сетевого сбора.</string>
   <string name="common_not_enough_funds_title">Недостаточный баланс</string>
   <string name="common_ok">OK</string>
+  <string name="common_ok_back">Хорошо, назад</string>
   <string name="common_options_title">Выберите опцию</string>
   <string name="common_paste">Вставить</string>
   <string name="common_per_year_format">%s / год</string>
@@ -172,6 +194,7 @@
   <string name="common_skip">Пропустить</string>
   <string name="common_skip_process">Пропустить</string>
   <string name="common_status">Статус</string>
+  <string name="common_substrate_address">Substrate адрес</string>
   <string name="common_time_left">Оставшееся время</string>
   <string name="common_title">Заголовок</string>
   <string name="common_transaction_id">ID транзакции</string>
