--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_welcome_hardware_wallet_title">Connect hardware wallet</string>
+  <string name="account_welcome_hardware_wallet_subtitle">Use Parity Signer</string>
+
+  <string name="account_parity_signer_import_start_select_top">Make sure to select top one</string>
+  <string name="account_parity_signer_import_start_step_3">Parity Signer will provide you <font color='#FFFFFF'>QR code to scan</font></string>
+  <string name="account_parity_signer_import_start_step_2"><font color='#FFFFFF'>Go to “Keys” tab. Select seed, then account</font> you would like to add to Nova Wallet</string>
+  <string name="account_parity_signer_import_start_step_1"><font color='#FFFFFF'>Open Parity Signer</font> application on your smartphone</string>
+  <string name="account_parity_signer_import_start_title">Add wallet from Parity Signer</string>
+
   <string name="account_details_parity_signer_not_supported">Not supported by Parity Signer</string>
   <string name="account_details_parity_signer_alert">This wallet is paired with Parity Signer. Nova will help you to form any operations you want, and you will be requested to sign them using Parity Signer</string>
-  <string name="account_parity_signer">parity signer</string>
+  <string name="account_parity_signer">Parity Signer</string>
   
   <string name="account_delete_confirmation_description">Make sure you have exported your wallet before proceeding.</string>
   <string name="account_delete_confirmation_title">Forget wallet?</string>
