--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_parity_signer_import_scan_invalid_qr">Invalid QR code, please make sure you are scanning QR code from Parity Signer</string>
+
+  <string name="common_permission_permissions_needed_title">Permissions needed</string>
+  <string name="common_permission_permissions_needed_message">Requested permissions are required to use this screen.</string>
+  <string name="common_ask_again">Ask again</string>
+
+  <string name="common_permission_permissions_denied_title">Permissions denied</string>
+  <string name="common_permission_permissions_denied_message">Requested permissions are required to use this screen. You should enable them in Settings.</string>
+  <string name="common_to_settings">Open Settings</string>
+
+  <string name="account_parity_signer_scan">Scan the QR code provided by Parity Signer</string>
+
   <string name="account_welcome_hardware_wallet_title">Connect hardware wallet</string>
   <string name="account_welcome_hardware_wallet_subtitle">Use Parity Signer</string>
 
