--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_parity_signer_sign_qr_code_expired_descrition">For security reasons generated operations valid for only %s.\nPlease generate new QR code and sign it with Parity Signer</string>
   <string name="account_parity_signer_sign_qr_code_expired">QR code has expired</string>
   <string name="account_parity_signer_sign_qr_code_valid_format">QR code is valid for %s</string>
 
