--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_parity_signer_sign_qr_code_expired_descrition">For security reasons generated operations valid for only %s.\nPlease generate new QR code and sign it with Parity Signer</string>
+  <string name="account_parity_signer_sign_qr_code_expired">QR code has expired</string>
+  <string name="account_parity_signer_sign_qr_code_valid_format">QR code is valid for %s</string>
+
+  <string name="account_parity_signer_sign_have_error">I have an error in Parity Signer</string>
+
+  <string name="account_parity_signer_sign_title">Sign with Parity Signer</string>
+  
   <string name="account_parity_signer_import_preview_title">Here are your accounts</string>
   <string name="account_parity_signer_import_preview_description">Following accounts have been successfully read from Parity Signer</string>
 
@@ -13,7 +21,8 @@
   <string name="common_permission_permissions_denied_message">Requested permissions are required to use this screen. You should enable them in Settings.</string>
   <string name="common_to_settings">Open Settings</string>
 
-  <string name="account_parity_signer_scan">Scan the QR code provided by Parity Signer</string>
+  <string name="account_parity_signer_scan_from">Scan the QR code provided by Parity Signer</string>
+  <string name="account_parity_signer_scan_with">Scan the QR code with Parity Signer</string>
 
   <string name="account_welcome_hardware_wallet_title">Connect hardware wallet</string>
   <string name="account_welcome_hardware_wallet_subtitle">Use Parity Signer</string>
