--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -267,6 +267,7 @@
 
   <string name="wallet_sender">Sender</string>
   <string name="wallet_recipient">Recipient</string>
+  <string name="wallet_select">Select wallet</string>
   <string name="wallet_transfer_details_send_back">Send to this contact</string>
 
   <string name="common_transaction_id">Transaction ID</string>
