--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_select_address_title">Your wallets</string>
+  <string name="account_select_address_account_not_found">Account is not found</string>
+  <string name="assets_select_send_your_wallets">Your wallets</string>
+
   <string name="account_parity_signer_not_supported_title">Signing is not supported</string>
   <string name="account_parity_signer_not_supported_subtitle">Parity Signer does not support signing arbitrary messages — only transactions</string>
 
@@ -267,7 +271,6 @@
 
   <string name="wallet_sender">Sender</string>
   <string name="wallet_recipient">Recipient</string>
-  <string name="wallet_select">Select wallet</string>
   <string name="wallet_transfer_details_send_back">Send to this contact</string>
 
   <string name="common_transaction_id">Transaction ID</string>
