Easier transfer between own wallets/accounts (#386)
* Fix colors and add "select wallet" button

* Easier transfer between own wallets/accounts

* Add ripple effect to select wallet button

* Functionality improvement

* improved code style

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="assets_select_send_your_wallets">Your wallets</string>
+
   <string name="assets_balance_details_locks_reserved">Reserved</string>
   <string name="assets_balance_details_locks_staking">Staking</string>
   <string name="assets_balance_details_locks_democrac">Democracy</string>
