--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_welcome_hardware_wallet_subtitle">Use Parity Signer or Ledger</string>
+<!--  <string name="account_welcome_hardware_wallet_subtitle">Use Parity Signer</string>-->
+
+  <string name="account_ledger_nano_x">Ledger Nano X</string>
+  <string name="account_select_hardware_wallet">Select hardware wallet</string>
+
+  <string name="account_ledger_import_start_title">Connect Ledger Nano X</string>
+  <string name="account_ledger_import_start_guide">Ledger’s official Bluetooth Connection Guide</string>
+
+  <string name="account_ledger_import_start_step_4">Select an <font color='#FFFFFF'>account to pair</font> in Nova Wallet</string>
+  <string name="account_ledger_import_start_step_3">Allow Nova Wallet to <font color='#FFFFFF'>access Bluetooth</font></string>
+  <string name="account_ledger_import_start_step_2"><font color='#FFFFFF'>Open the network app</font> on your Ledger device</string>
+  <string name="account_ledger_import_start_step_1">Make sure <font color='#FFFFFF'>Network apps are installed</font> to your Ledger device using Ledger Live app</string>
+
   <string name="account_parity_signer_not_supported_title">Signing is not supported</string>
   <string name="account_parity_signer_not_supported_subtitle">Parity Signer does not support signing arbitrary messages — only transactions</string>
 
@@ -33,7 +47,6 @@
   <string name="account_parity_signer_scan_with">Scan the QR code with the Parity Signer</string>
 
   <string name="account_welcome_hardware_wallet_title">Connect hardware wallet</string>
-  <string name="account_welcome_hardware_wallet_subtitle">Use Parity Signer</string>
 
   <string name="account_parity_signer_import_start_select_top">Make sure to select top one</string>
   <string name="account_parity_signer_import_start_step_3">Parity Signer will provide you <font color='#FFFFFF'>QR code to scan</font></string>
