--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="wallet_currency_title">Currency</string>
+  <string name="wallet_currency_category_cryptocurrencies">Cryptocurrencies</string>
+  <string name="wallet_currency_category_feat">Fiat currencies</string>
+  <string name="wallet_currency_category_popular_feat">Popular fiat currencies</string>
+
   <string name="assets_select_send_your_wallets">Your wallets</string>
 
   <string name="assets_balance_details_locks_reserved">Reserved</string>
@@ -23,6 +28,7 @@
   <string name="account_parity_signer_sign_have_error">I have an error in Parity Signer</string>
 
   <string name="account_parity_signer_sign_title">Sign with Parity Signer</string>
+  
   <string name="account_parity_signer_import_preview_title">Here are your accounts</string>
   <string name="account_parity_signer_import_preview_description">Following accounts have been successfully read from Parity Signer</string>
 
@@ -51,6 +57,7 @@
   <string name="account_details_parity_signer_not_supported">Not supported by Parity Signer</string>
   <string name="account_details_parity_signer_alert">This wallet is paired with Parity Signer. Nova will help you to form any operations you want, and you will be requested to sign them using Parity Signer</string>
   <string name="account_parity_signer">Parity Signer</string>
+  
   <string name="account_delete_confirmation_description">Make sure you have exported your wallet before proceeding.</string>
   <string name="account_delete_confirmation_title">Forget wallet?</string>
 
@@ -75,6 +82,7 @@
   <string name="account_watch_key_missing_description">Your wallet is watch-only, meaning that you cannot do any operations with it</string>
 
   <string name="account_add_watch_wallet">Add watch-only wallet</string>
+  
   <string name="account_enter_wallet_nickname">Enter wallet nickname...</string>
   <string name="accoount_enter_substrate_address">Enter valid substrate address...</string>
   <string name="accoount_enter_evm_address">Evm address must be valid or empty...</string>
@@ -860,5 +868,4 @@
   <string name="wallet_transfer_details_title">Transfer details</string>
   <string name="wallet_your_balance">Your balance</string>
   <string name="yesterday">Yesterday</string>
-
 </resources>
