--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="ledger_import_select_address_load_more">Load more accounts</string>
+  <string name="ledher_import_select_address_title">Select an account to pair in Nova Wallet</string>
+
   <string name="ledger_error_general_title">Operation failed</string>
   <string name="ledger_error_general_message">Operation completed with error on device. Please, try again later.</string>
 
