--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="ledger_sign_transaction_expired_message">For security reasons generated operations valid for only %s.\nPlease generate new QR code and sign it with Parity Signer</string>
+  <string name="ledger_sign_transaction_expired_title">Transaction has expired</string>
+
   <string name="ledger_wallet_details_description">This wallet is paired with Ledger. Nova will help you to form any operations you want, and you will be requested to sign them using Ledger</string>
 
   <string name="common_ledger">Ledger</string>
