--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-  <string name="ledger_sign_transaction_expired_message">For security reasons generated operations valid for only %s.\nPlease generate new QR code and sign it with Parity Signer</string>
+  <string name="ledger_sign_tx_not_supported_title">Transaction is not supported</string>
+  <string name="ledger_sign_tx_not_supported_subtitle">Ledger does not support this transaction.</string>
+
+  <string name="ledger_sign_metadata_outdated_title">Metadata is outdated</string>
+  <string name="ledger_sign_metadata_outdated_subtitle">Please, update %s app using Ledger Live app</string>
+
+  <string name="ledger_sign_transaction_validity_format">Transaction is valid for %s</string>
+
+  <string name="ledger_sign_approve_title">Review and Approve</string>
+  <string name="ledger_sign_approve_message">Press both buttons on your %s to approve the transaction</string>
+
+  <string name="ledger_sign_transaction_expired_message">For security reasons generated operations valid for only %s. Please try again and approve it with Ledger</string>
   <string name="ledger_sign_transaction_expired_title">Transaction has expired</string>
 
   <string name="ledger_wallet_details_description">This wallet is paired with Ledger. Nova will help you to form any operations you want, and you will be requested to sign them using Ledger</string>
