--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="common_signature_invalid">Signature is invalid</string>
+  <string name="ledger_sign_signature_invalid_message">Please make sure you have selected the right Ledger device for currently approving operation</string>
+
+  <string name="ledger_sign_tx_not_supported_title">Transaction is not supported</string>
+  <string name="ledger_sign_tx_not_supported_subtitle">Ledger does not support this transaction.</string>
+
+  <string name="ledger_sign_metadata_outdated_title">Metadata is outdated</string>
+  <string name="ledger_sign_metadata_outdated_subtitle">Please, update %s app using Ledger Live app</string>
+
+  <string name="ledger_sign_transaction_validity_format">Transaction is valid for %s</string>
+
+  <string name="ledger_sign_approve_title">Review and Approve</string>
+  <string name="ledger_sign_approve_message">Press both buttons on your %s to approve the transaction</string>
+
+  <string name="ledger_sign_transaction_expired_message">For security reasons generated operations valid for only %s. Please try again and approve it with Ledger</string>
+  <string name="ledger_sign_transaction_expired_title">Transaction has expired</string>
+
   <string name="ledger_wallet_details_description">This wallet is paired with Ledger. Nova will help you to form any operations you want, and you will be requested to sign them using Ledger</string>
 
   <string name="common_ledger">Ledger</string>
@@ -8,7 +25,7 @@
   <string name="ledger_verify_address_subtitle">Press both buttons on your Nano X E426 to verify address</string>
 
   <string name="ledger_import_select_address_load_more">Load more accounts</string>
-  <string name="ledher_import_select_address_title">Select an account to pair in Nova Wallet</string>
+  <string name="ledher_import_select_address_title">Select account to add to wallet</string>
 
   <string name="ledger_error_general_title">Operation failed</string>
   <string name="ledger_error_general_message">Operation completed with error on device. Please, try again later.</string>
@@ -20,7 +37,7 @@
   <string name="ledger_error_app_not_launched_message">Open the %s app on your Ledger device </string>
 
   <string name="account_ledger_select_device_title">Select your Ledger device</string>
-  <string name="account_ledger_select_device_description">Please enable Bluetooth in your phone settings. Open the Polkadot app on your Ledger device </string>
+  <string name="account_ledger_select_device_description">Please, enable Bluetooth in your phone settings and Ledger device. Unlock your Ledger device and open the %s app.</string>
 
   <string name="common_cancel_operation_warning">Are you sure you want to cancel this operation?</string>
   <string name="common_yes">Yes</string>
