--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="ledger_sign_raw_not_supported">Ledger does not support signing arbitrary messages — only transactions</string>
+
+  <string name="assets_receive_ledger_not_supported_message">Do not transfer %s to the Ledger-controlled account since Ledger does not support sending of %s, so assets will be stuck on this account</string>
+  <string name="assets_receive_ledger_not_supported_title">Ledger does not support this token</string>
+
   <string name="common_signature_invalid">Signature is invalid</string>
   <string name="ledger_sign_signature_invalid_message">Please make sure you have selected the right Ledger device for currently approving operation</string>
 
